TEIIDTOOLS-384, TEIIDTOOLS-380, TEIIDTOOLS-373 * Before the VDB based service build is invoked check is added to make sure the base image exists, if not build ends up in error * Added the CPU resource limits on VM based CGroups limits * Also added a timeout for build configuration of 2 mins before it fails to finish the configuration, note this is configuration, not the build image itself, that could take more time. * centralized all the user specific configuration to the central place in PublishConfiguration class